--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -3513,3 +3513,7 @@ a {
     width: 100%;
     font-family: 'Calibri','Helvetica Neue', Arial,sans-serif;
 }
+.descriptionWidth {
+    inline-size: 300px;
+    overflow-wrap: break-word;
+}
