--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -12,7 +12,7 @@
     <button class="btn-footer-fill mt-2 mr-2" id="btnPreview" title="Preview" [disabled]="isMasterSaveBtnDisabled" (click)="pageDesignPreview()"> Preview</button>
     <button class="btn-footer-fill mt-2 mr-2" id="btnPrev" title="Previous" [disabled]="isMasterSaveBtnDisabled" (click)="prevBtnClicked()"> Prev</button>
     <button class="btn-footer-fill mt-2 mr-2" id="btnSave" title="Save" [disabled]="isMasterSaveBtnDisabled" (click)="OnSaveBtnClicked()"> Save</button>
-    <button class="btn-footer-outline mt-2" id="btnCancel" title="Cancel" (click)="backClicked()"> Cancel ll</button>
+    <button class="btn-footer-outline mt-2" id="btnCancel" title="Cancel" (click)="backClicked()"> Cancel</button>
   </div>
   <div class="float-right pr-2 d-md-none">
     <!-- <span class="fa fa- xs-position1 d-md-none" (click)="OnSaveBtnClicked()"></span> -->
@@ -155,7 +155,7 @@
       'fa-bar-chart' : widget.WidgetName == 'MCAVATAnalysis' || widget.WidgetName == 'WealthMCAVATAnalysis'
   }">
       </span>-->
-          <span class="nav-title text-truncate" title="{{ widget.DisplayName }}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100px"> {{widget.DisplayName}} </span>
+          <span class="nav-title text-truncate" title="{{ widget.DisplayName }}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis"> {{widget.DisplayName}} </span>
 
         </a>
       </li>
