Resolved Dynamic widget editor isue

--- a/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
@@ -281,6 +281,7 @@
                         <!--<form #form='ngForm' (ngSubmit)="onSubmit(form)">-->
                         <ejs-richtexteditor id='customRTE' #customRTE
                                             [toolbarSettings]='tools'
+                                            [height]='400'
                                             [value]='editorValue' [insertImageSettings]='insertImageSettings'
                                             >
 
