--- a/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
@@ -281,7 +281,8 @@
                         <!--<form #form='ngForm' (ngSubmit)="onSubmit(form)">-->
                         <ejs-richtexteditor id='customRTE' #customRTE
                                             [toolbarSettings]='tools'
-                                            [height]='400'
+                                            [height]='400'  [backgroundColor]='bgColor' [fontColor] ='fontColor'
+                                            [fontSize]='size' [fontFamily] ='family' 
                                             [value]='editorValue' [insertImageSettings]='insertImageSettings'
                                             >
 
